# bat

./: .gitignore  Cargo.toml  README.md  justfile  justfile copy  lcov.info
.cargo/: config.toml
.cursor/rules/: bat.mdc  clean_code.mdc  comprehensive-development-guidelines.mdc  memory-bank.mdc
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
